--- a/WorldTrotter/Base.lproj/Main.storyboard
+++ b/WorldTrotter/Base.lproj/Main.storyboard
@@ -55,6 +55,7 @@
                             </textField>
                         </subviews>
                         <color key="backgroundColor" red="0.96078431372549022" green="0.95686274509803915" blue="0.94509803921568625" alpha="1" colorSpace="calibratedRGB"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="6CE-6u-wgs" firstAttribute="centerX" secondItem="RKW-Y4-m3s" secondAttribute="centerX" id="3Vj-eU-wYU"/>
                             <constraint firstItem="6CE-6u-wgs" firstAttribute="top" secondItem="RKW-Y4-m3s" secondAttribute="bottom" constant="8" id="4Qb-XI-mjW"/>
@@ -67,12 +68,21 @@
                             <constraint firstItem="eNM-eJ-f7W" firstAttribute="centerX" secondItem="RKW-Y4-m3s" secondAttribute="centerX" id="fUC-fM-Ejc"/>
                             <constraint firstItem="obH-f8-Kj9" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="npn-nU-Gfd"/>
                         </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="76v-TX-Ezb" appends="YES" id="lPw-Q5-ESG"/>
+                        </connections>
                     </view>
                     <connections>
                         <outlet property="celsiusLabel" destination="eNM-eJ-f7W" id="x5n-c4-kOy"/>
+                        <outlet property="textField" destination="obH-f8-Kj9" id="LSk-fO-pS4"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="76v-TX-Ezb">
+                    <connections>
+                        <action selector="dismissKeyboard:" destination="BYZ-38-t0r" id="7za-di-nS5"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
         </scene>
     </scenes>
